
bin_PROGRAMS = pique

pique_SOURCES = pique.c \
                bloom.h bloom.c \
                dbg.h dbg.c \
                kmer.h kmer.c \
                misc.h misc.c \
                twobit.h twobit.c \
				crc64.h crc64.c \
				crc64_table_be.h crc64_table_le.h \
                fastq.h fastq.c \
                kmercache.h kmercache.c \
                rng.h rng.c \
                kmerset.h kmerset.c

pique_LDADD = -lm

